gallery.htmlCropping of pictures in JS. Fixed minor bug in home.html.

--- a/photos/static/photos/css/style.css
+++ b/photos/static/photos/css/style.css
@@ -39,15 +39,16 @@
     margin-left:auto;
     margin-right:auto;
     background-color:yellow;
-    overflow:hidden;
 }
 .container{
-    position:relative;
-    width:300px;
-    height:200px;
+    margin: 0 auto 20px;
     overflow:hidden;
+    background-color:blue;
 }
 
+.crop {
+    overflow:hidden;
+}
 
 .container2 {
 background-color:blue;
@@ -60,10 +61,9 @@ background-color:blue;
 }
 
 .picture{
+    overflow:hidden;
 }
 .container img {
-    position:absolute;
-    width:100%;
 }
 
 
